Fix yellow flash on page refresh by setting dark background inline

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: #1A1B1F;">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg.svg" />
@@ -21,9 +21,9 @@
     <link rel="dns-prefetch" href="https://raw.githubusercontent.com">
     
     <!-- Theme color for mobile browsers -->
-    <meta name="theme-color" content="#E3B23C">
+    <meta name="theme-color" content="#1A1B1F">
   </head>
-  <body>
+  <body style="background-color: #1A1B1F;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
